# rust-versel

./: .env  Cargo.toml  vercel.json
migrations/2023-05-10-001108_create_authors/: up.sql
migrations/2023-05-10-001134_create_books/: up.sql
migrations/2023-05-10-001202_create_books_authors/: up.sql
migrations/2023-06-06-132620_phone_table/: up.sql
migrations/2023-06-09-150633_test_mig/: up.sql
src/: main.rs  models.rs  phone.rs  schema.rs
