[package]
name = "letf_joins"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

diesel = { version = "2.1.0", features = ["mysql", "r2d2", "chrono"] }
actix-web = "4"
dotenv = "0.15.0"
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0"

